# rust-first

./: vercel.json
weather-app/: .gitignore  Cargo.toml  README.md
weather-app/src/: main.rs
weather-app/static/: index.html  script.js  style.css
