[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
tower-service = "0.3"
